--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
          uses: actions/checkout@v3
        - name: Call Lint Command
          run: npm lint
-         working-directory: node_modules
+         working-directory: 04 Practice Project (Start)/node_modules
    test:
      runs-on: ubuntu-latest
      steps:
@@ -16,12 +16,13 @@ jobs:
          uses: actions/checkout@v3
        - name: Call Test Command
          run: npm test
-         working-directory: node_modules
+         working-directory: 04 Practice Project (Start)/node_modules
    build:
+     needs: test
      runs-on: ubuntu-latest
      steps:
        - name: Add Respository
          uses: actions/checkout@v3
        - name: Call Build Command
          run: npm build
-         working-directory: node_modules
+         working-directory: 04 Practice Project (Start)/node_modules
