--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,8 @@ jobs:
      steps:
        - name: Add Respository
          uses: actions/checkout@v3
-       - name: Install Vitest
-         run: npm i eslint
+       - name: Install dependencies
+         run: npm ci
        - name: Call Lint Command
          run: npm run lint
          working-directory: 04 Practice Project (Start)
@@ -16,8 +16,8 @@ jobs:
      steps:
        - name: Add Respository
          uses: actions/checkout@v3
-       - name: Install Vitest
-         run: npm i vitest
+       - name: Install dependencies
+         run: npm ci
        - name: Call Test Command
          run: npm run test
          working-directory: 04 Practice Project (Start)
