--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
          uses: actions/checkout@v3
        - name: Install dependencies
          run: npm ci
+         working-directory: 04 Practice Project (Start)
        - name: Call Lint Command
          run: npm run lint
          working-directory: 04 Practice Project (Start)
@@ -18,6 +19,7 @@ jobs:
          uses: actions/checkout@v3
        - name: Install dependencies
          run: npm ci
+         working-directory: 04 Practice Project (Start)
        - name: Call Test Command
          run: npm run test
          working-directory: 04 Practice Project (Start)
