--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
      steps:
        - name: Add Respository
          uses: actions/checkout@v3
+       - name: Install dependencies
+         run: npm ci
+         working-directory: 04 Practice Project (Start)
        - name: Call Build Command
          run: npm run build
          working-directory: 04 Practice Project (Start)
